--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn with Sumit Node.js Chat Application",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production & nodemon app.js",
+    "start": "cross-env NODE_ENV=production & node app.js",
     "dev": "cross-env NODE_ENV=development & node app.js"
   },
   "repository": {
